--- a/estilos.css
+++ b/estilos.css
@@ -67,7 +67,7 @@ main{
     max-width: 1200px;
     height:calc(100vh + 800px);
     padding: 40px;
-    margin: auto;    
+    margin: 0 auto;    
 }
 .cover{
     display: flex; 
@@ -119,6 +119,21 @@ main{
     margin-top: 10px;
     text-align:left;
     
+}
+.container_card{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.card{
+    padding: 20px;
+    width: 230px;
+    height: 40%;
+    border-radius: 30px;
+    border: 2px solid black;
+    background-color: blanchedalmond;
+    margin-top: 30px;
+
 }
 /*Banner*/
 
