--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,500&display=swap');
-
-
 *{
     margin: 0;
     padding: 0;
@@ -8,27 +6,39 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body{
-    background: #f5f5f5;
-}
+/*body{
+    background: #9b1818;
+}*/
 header{
-    height: 100px;
+    height: 100px;      
+}
+.contenedor{
+    width: 95%;
+    max-width: 1140px;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
+    padding-top:30px;
+    padding-bottom: 30px;
 }
 .container__header{
     max-width: 1200px;
     height: 100%;
     margin: auto;
     padding: 0;
-    padding-top: 80px;
+    padding-top: 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    
 }
 .logo img{
-    width: 130px;
+    width: 150px;
 }
+
 .menu nav ul{
     display: flex;
+    
 }
 .menu nav ul li{
     list-style: none;
@@ -41,7 +51,7 @@ header{
     transition: opaciy 300ms;    
 }
 .menu nav ul li a:hover{
-    opacity: 0.6;
+    opacity: 0.2;
 }
 .btn__header-register,
 .btn__register-cover{
@@ -63,15 +73,19 @@ header{
     display: none;
 }
 
-main{
-    max-width: 1200px;
-    height:calc(100vh + 800px);
-    padding: 40px;
-    margin: 0 auto;    
+/* fin header */
+.container_cover{
+    width: 95%;
+    max-width: 1140px;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
+    padding-top:30px;
+    padding-bottom: 30px;
 }
 .cover{
     display: flex; 
-    justify-content: center;
+    justify-content:space-around;
     margin-top: 60px;
 }
 .text__information-cover{
@@ -82,7 +96,7 @@ main{
 }
 .text__information-cover p{
     font-size: 18px;
-    margin-top: 40px;
+    margin-top: 45px;
 }
 .buttons__cover{
     display: flex;
@@ -103,27 +117,63 @@ main{
     color: #000;
 }
 .media__cover{
-    width: 50%;    
+    width: 45%;    
 }
 .media__cover video{
     width: 100%;
     margin-top: 20px;
     border-radius: 10px;
 }
-/**/
-.container_slide{
+/*carousel*/
+
+.carousel{
     margin-top: 0px;
-    padding: 90px;
+    padding: 60px;
 }
-.container_slide h2{
-    margin-top: 10px;
-    text-align:left;
-    
+.carousel h2{
+    margin-top: 0px;
+    text-align:left;    
+}
+/*Fin carousel*/
+
+/*Productos*/
+.productos{
+    background: #f2f2f2;
+}
+.container_slide{
+    background: #f2f2f2;
+    width: 100%;
+    max-width: 1200px;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 60px 0;
+    padding-top:30px;
+    padding-bottom: 30px;
+}
+
+
+/*Fin Productos*/
+/*Promociones*/
+.promociones{
+    background:white;
+}
+
+/*Categorias*/
+.categorias{
+   background: #f2f2f2;
 }
 .container_card{
+    width: 95%;
+    max-width: 1140px;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
+    padding-top:30px;
+    padding-bottom: 30px;
+
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content:space-around;
+    flex-wrap:wrap;
 }
 .card{
     padding: 20px;
@@ -135,62 +185,26 @@ main{
     margin-top: 30px;
 
 }
-/*Banner*/
 
-.container__banner{
-    margin-top: 100px;
+
+
+footer{
+    background: #64ef4c;
+    height: 100%;
+    
 }
-.banner{
-    height: 250px;
+.footerContenido{
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    background: #121214;
-    position: relative;
+    flex-wrap: wrap;
+    padding-top: 100px;
+    padding-bottom: 40px;
 }
-.banner__icon-heart{
-    width: 35%;
-    height: 100%;
-}
-#icon_heart{
-    width: 400px;
-    margin-top: -20px;
-    position: relative;
-    filter:drop-shadow(-40px 0px 30px rgba(0,0,0,0.5))
-}
-.banner__text{
-    width: 60%;
-    position: relative;
-    padding: 40px;
-}
-.banner__text h2{
-    color: #f5f5f5;
-    font-size: 32px;
-    font-weight: 400;
-}
-.banner__text a{
-    text-decoration: none;
-    display: block;
-    margin-top: 20px;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    transition: color 300ms;
-}
-.banner__text a:hover{
-    color:#69f1a1;    
-}
-.banner__icon-fire{
-    height: 100%;
-    position: absolute;
-    right: 10px;
-    overflow: hidden;
-}
-#icon_fire{
-    width: 300px;
-    position: relative;
-    margin-top: -100px;
-    opacity:0.6;
-}
+
+
+
+/*
 
 @media (max-width: 1024px) {
     .container__header,
@@ -223,7 +237,9 @@ main{
     .menu nav ul li{
         padding: 10px 40px;
     }
-    .mostrar_menu{/* minupulada con js*/
+    /*minupulada con js*/
+    /*
+    .mostrar_menu{ 
         height: 235px;
     }
     .text__information-cover h1{
