--- a/estilos.css
+++ b/estilos.css
@@ -10,9 +10,23 @@
     background: #9b1818;
 }*/
 header{
-    height: 100px;   
-    
+    background: #fafafa;
+   
+       
 }
+main{
+    margin-top:10px;
+    width: 100%;
+}
+#main-header{
+    margin-top: -25px;
+    padding-bottom: 100px;
+    background: #fafafa;
+    width: 100%;
+    height: 100px;
+    position:fixed;
+}
+
 .contenedor{
     width: 95%;
     max-width: 1440px;
