--- a/estilos.css
+++ b/estilos.css
@@ -18,25 +18,15 @@ main{
     margin-top:10px;
     width: 100%;
 }
-#main-header{
+/*#main-header{
     margin-top: -25px;
     padding-bottom: 100px;
     background: #fafafa;
     width: 100%;
     height: 100px;
     position:fixed;
-}
+}*/git t
 
-.contenedor{
-    width: 95%;
-    max-width: 1440px;
-    overflow: hidden;
-    margin: 0 auto;
-    padding: 0;
-    padding-top:30px;
-    padding-bottom: 30px;
-   
-}
 .container__header{
     max-width: 1440px;
     height: 100px;
@@ -171,18 +161,23 @@ main{
 
 /*Fin Productos*/
 /*Promociones*/
+
 .promociones{
+    
     background:white;
     display: flex;
-    padding: 10px;
+    padding: 10px 0;
     justify-content: space-between;
     align-items: center;
+    padding: 50px 0;
+    padding-top:35px;
+    padding-bottom: 35px;
 }
 
 .img-promos{
     padding:5px;
-    width: 330px;
-    height: 80%;
+    width: 350px;
+    height: 50%;
     border-radius: 30px;
     border: 2px solid black;
     background-color: blanchedalmond;
@@ -197,7 +192,7 @@ main{
    background: #f2f2f2;
 }
 .container_card{
-    width: 95%;
+    width: 100%;
     max-width: 1440px;
     overflow: hidden;
     margin: 0 auto;
@@ -211,7 +206,7 @@ main{
 }
 .card{
     padding: 20px;
-    width: 230px;
+    width: 350px;
     height: 40%;
     border-radius: 30px;
     border: 2px solid black;
